--- a/models/research/ssd_mobilenet_v1_pets.config
+++ b/models/research/ssd_mobilenet_v1_pets.config
@@ -155,7 +155,7 @@ train_config: {
       epsilon: 1.0
     }
   }
-  fine_tune_checkpoint: "PATH_TO_BE_CONFIGURED/model.ckpt"
+  fine_tune_checkpoint: "/week9/data_set/model.ckpt"
   from_detection_checkpoint: true
   # Note: The below line limits the training process to 200K steps, which we
   # empirically found to be sufficient enough to train the pets dataset. This
@@ -174,9 +174,9 @@ train_config: {
 
 train_input_reader: {
   tf_record_input_reader {
-    input_path: "PATH_TO_BE_CONFIGURED/pet_train.record"
+    input_path: "/week9/data_set/pet_train.record"
   }
-  label_map_path: "PATH_TO_BE_CONFIGURED/pet_label_map.pbtxt"
+  label_map_path: "/week9/data_set/pet_label_map.pbtxt"
 }
 
 eval_config: {
@@ -188,9 +188,9 @@ eval_config: {
 
 eval_input_reader: {
   tf_record_input_reader {
-    input_path: "PATH_TO_BE_CONFIGURED/pet_val.record"
+    input_path: "/week9/data_set/pet_val.record"
   }
-  label_map_path: "PATH_TO_BE_CONFIGURED/pet_label_map.pbtxt"
+  label_map_path: "/week9/data_set/pet_label_map.pbtxt"
   shuffle: false
   num_readers: 1
 }
